[gd_scene load_steps=7 format=3 uid="uid://dud10u1rh6sth"]

[ext_resource type="Script" path="res://Code/player.gd" id="1_5hwy3"]
[ext_resource type="Texture2D" uid="uid://c33b25wgmaqay" path="res://Assets/New Piskel.png" id="2_31bqy"]
[ext_resource type="PackedScene" uid="uid://khyhevjasqxd" path="res://tscn/Object/stats.tscn" id="3_xravh"]
[ext_resource type="Script" path="res://Code/playerUI.gd" id="4_ho2t1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_w8ty8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_irdab"]
radius = 16.0
height = 48.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_5hwy3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -11)
scale = Vector2(3, 3)
texture = ExtResource("2_31bqy")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
position = Vector2(-1.78814e-07, 3.57628e-06)
scale = Vector2(28, 22)
mesh = SubResource("CapsuleMesh_w8ty8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_irdab")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Stats" parent="." instance=ExtResource("3_xravh")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = 0
limit_top = 0
limit_right = 2160
limit_bottom = 1200
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
script = ExtResource("4_ho2t1")

[node name="HealthBar" type="ProgressBar" parent="Camera2D/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_bottom = 27.0
grow_horizontal = 0
max_value = 120.0

[node name="ManaBar" type="ProgressBar" parent="Camera2D/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 31.0
offset_bottom = 58.0
grow_horizontal = 0

[node name="ExperienceBar" type="ProgressBar" parent="Camera2D/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_top = 65.0
offset_bottom = 92.0
grow_horizontal = 0
